Added simulation for sensors, code optimizations

--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,8 @@
 	"device": {
 		"id": "********",
 		"user": "********",
-		"password": "********"
+		"password": "********",
+		"simulation": false
 	},
 	"mqtt": {
 		"address": "********",
