--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Embedded device for measuring temperature and humidity, detecting motion and smoke (gas) at home or in the office. The device sends the data via mqtt protocool",
   "main": "index.js",
   "scripts": {
-    "build": "node build upload",
-    "config": "node build config",
-    "sign": "node build sign",
-    "start": "node build start"
+    "mkfs": "node build.js mkfs",
+    "upload": "node build.js upload",
+    "config": "node build.js config",
+    "sign": "node build.js sign",
+    "start": "node build.js start"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "commander": "^2.9.0",
     "nodemcu-tool": "^2.0.4",
+    "serialport": "^4.0.7",
     "shelljs": "^0.7.6"
   }
 }
